# drf-auth1

./: READM.md  db.sqlite3  pyproject.toml
accounts/: forms.py  models.py
accounts/migrations/: 0001_initial.py
snack_project/: asgi.py  settings.py  urls.py  wsgi.py
snacks/: models.py  permissions.py  serializers.py  urls.py  views.py
